# DJ-Panel

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DATABASE_SCHEMA_DRAFT.md  DJ_PROCESSING_V1_DESIGN.md  README.md  V1_API_OPENAPI_STYLE.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_control_plane_mvp.py  0001_jobversion_lite.py  0002_metadata_compat.py  0003_merge_backend_heads.py  0004_v1_asset_submission_fields.py  0005_run_submissions.py  0006_asset_table_names.py  0007_asset_column_names.py  0008_drop_recipe_lineage_and_mlflow.py  0009_command_submissions.py  0010_drop_task_logs.py  0011_asset_catalog_and_execution_links.py  0012_task_artifact_asset_names.py  0013_assets_current_version.py  0014_job_facets_version_links.py  0015_asset_facets_version_links.py  0016_processing_submission_kind.py  0017_execution_links_public_run_only.py
app/: config.py  main.py
app/api/: dependencies.py  errors.py
app/db/: engine.py  rows.py  schema.py  session.py
app/execution/: __init__.py  definitions.py  task_runners.py  worker_api.py  worker_runtime.py
cli/: __init__.py  commands.py  executor.py  parser.py  utils.py  worker.py
dj_lineage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dj_panel_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CLI_REFERENCE.md  CURRENT_PROJECT.md  DATABASE_SCHEMA_DRAFT.md  DJ_PROCESSING_V1_DESIGN.md  DJ_WORKER_PAYLOAD_AND_SEQUENCE.md  ENVIRONMENT_VARIABLES.md  README.md  RUN_SUBMISSION_SPEC.md  TARGET_ARCHITECTURE.md  V1_API_OPENAPI_STYLE.md
tests/: test_api_compat.py  test_cli.py  test_control_plane_api.py  test_dj_worker_client.py  test_ingestion_flow.py  test_smoke.py
tools/: worker_client.py
web/: package-lock.json  package.json  webpack.common.js  webpack.dev.js
(+136 files in other folders)
