[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-panel-backend"
version = "0.1.0"
description = "DJ Panel backend for control-plane orchestration and lineage metadata services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[project.scripts]
dj-panel = "cli:main"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
